🦟 Bug Fix NavBar z-index

--- a/src/styles/global.sass
+++ b/src/styles/global.sass
@@ -40,6 +40,7 @@ header
   justify-content: center
   align-items: center
   position: fixed
+  z-index: 999
   top: 0px
   background-color: $dark
 
@@ -94,7 +95,7 @@ header
             height: 30%
             padding: 10px 20px 10px 20px
             border: 2px solid $yellow
-            border-radius: 5px
+            border-radius: 5pxs
             color: $yellow
             &:hover
               background-color: $yellow-10
